--- a/templates/index.html
+++ b/templates/index.html
@@ -216,17 +216,14 @@
 <p class="text-muted">
 The AAAI2021 virtual conference website
 uses <a href="https://github.com/Mini-Conf/Mini-Conf" >MiniConf</a> built by Hendrik Strobelt and Sasha Rush that
-  was extended by the <a href="https://github.com/acl-org/acl-2020-virtual-conference" >amazing team of ACL 2020</a> and
+  was extended by the <a href="https://github.com/acl-org/acl-2020-virtual-conference" >ACL 2020</a> and
     <a href="https://github.com/acl-org/emnlp-2020-virtual-conference">EMNLP 2020</a>.
-The AAAI2021 infrastructure committee is very grateful to the
-<a style="color: #ee353a" href="https://emnlp2020-public.s3.amazonaws.com/emnlp2020_volunteers.pdf" >volunteers</a>
-and contributors whose valuable contributions to building the virtual infrastructure made the conference possible.
+The AAAI2021 infrastructure committee is very grateful to the volunteers and contributors whose valuable contributions to building the virtual infrastructure made the conference possible.
 We would also like to thank <a href="https://desilinguist.org/">Nitin Madnani</a> for his advice and IT
   support regarding the virtual infrastructure. We also want to thank
   AI2  for contributing the <a href="https://github.com/allenai/specter">SPECTER model</a>
   used in the "Similar Papers" feature, David Wadden et al. for <a href="https://github.com/dwadden/dygiepp">DyGIE++</a>
-  that generated paper keywords for us and the team of <a href="https://www.connectedpapers.com/">Connected Papers</a>
-  for providing us with citation graphs.
+  that generated paper keywords for us.
 
 </p>
 
